# darktimes

./: .gitignore  CMakeLists.txt  Makefile  deployassets.sh
asset/: main1.adesc  player.tga  recipe  rollfile  svg2tga.sh
asset/shader/: blur.frag  blur.vert  dynamic.frag  dynamic.vert  dynamic_atlas.frag  dynamic_atlas.vert  dynamic_light.frag  dynamic_light.vert  floor.frag  floor.vert  overlay.frag  prop.frag  prop.vert  quad.vert  static_atlas.frag  static_atlas.vert  static_floor.frag  static_floor.vert  wall.frag  wall.vert
asset/texture/: atlas.txt  gameplay.atlas.txt
assets/: rollfile
src/: Darktimes.hpp  Game.cpp  Game.hpp  GameInput.hpp  Input.hpp  KeyEvent.hpp  LevelRenderState.hpp  LightRenderable.hpp  RandomNumberGenerator.cpp  RandomNumberGenerator.hpp  RenderState.hpp  Renderable.hpp  RenderableWorldState.hpp  Renderer.cpp  Renderer.hpp  SyncObjectManager.hpp  Texture.hpp  TextureDefinitions.cpp  TextureDefinitions.hpp  Textures.txt  WorldSimulation.cpp  WorldSimulation.hpp  assetmanager.cpp  assetmanager.hpp  darktimes.h  darktimes.hpp  input.hpp  level.cpp  level.h  leveldata.hpp  leveldatasyncobject.hpp  levelrenderstate.hpp  main.cpp  randomnumbergenerator.cpp  randomnumbergenerator.hpp  renderstate.hpp  syncobject.hpp  syncobjectmanager.hpp  world.cpp  world.h
src/entity/: entity.cpp  entity.h  wall.cpp
src/levelgen/: LevelGenerator.cpp  LevelGenerator.hpp  LevelObjects.hpp  LevelObjectsInternal.hpp  PropDefs.hpp  Structure.hpp  StructureDefs.hpp
src/render/: LightMeshGenerator.cpp  LightMeshGenerator.hpp  Renderable.hpp  Renderer.cpp  Renderer.hpp  RendererBackend.hpp  Texture.hpp  TextureAssetMap.hpp  TextureAssetMap.txt  TextureMap.hpp  TextureMap.txt  quadpass.cpp  quadpass.vert  renderer.cpp  renderer.h  renderer.hpp  texture.hpp
src/render/gl/: AtlasTextureCollection.cpp  AtlasTextureCollection.hpp  DynamicPass.cpp  DynamicPass.hpp  FloorPass.cpp  FloorPass.hpp  FloorTextureCollection.cpp  FloorTextureCollection.hpp  GL.cpp  GL.hpp  GLAtlasRenderer.cpp  GLAtlasRenderer.hpp  GLAtlasTextureCollection.cpp  GLAtlasTextureCollection.hpp  GLConstants.hpp  GLDynamicAtlasRenderer.cpp  GLDynamicAtlasRenderer.hpp  GLDynamicLightRenderer.cpp  GLDynamicLightRenderer.hpp  GLFloorRenderer.cpp  GLFloorRenderer.hpp  GLFloorTextureCollection.cpp  GLFloorTextureCollection.hpp  GLRenderer.cpp  GLRenderer.hpp  GLRendererBackend.cpp  GLRendererBackend.hpp  GLRendererBase.hpp  GLStaticAtlasRenderer.cpp  GLStaticAtlasRenderer.hpp  GLStaticFloorRenderer.cpp  GLStaticFloorRenderer.hpp  GLSubRenderer.hpp  GLUIRenderer.cpp  GLUIRenderer.hpp  PropPass.cpp  PropPass.hpp  debugquadpass.cpp  debugquadpass.hpp  floorpass.cpp  (+9 more)
src/sim/: BlockMap.hpp  Component.hpp  Controls.hpp  Entity.hpp  Game.cpp  Game.hpp  PoolTypes.hpp  Simulation.cpp  Simulation.hpp  World.cpp  World.hpp  component.hpp  entity.hpp  levelmanager.cpp  levelmanager.hpp  simulation.cpp  simulation.hpp  world.hpp
src/sim/component/: Component.hpp  Components.hpp  PhysicalComponent.hpp  PlayerComponent.hpp  RenderableComponent.hpp
src/sim/entity/: Entities.hpp  Entity.cpp  Entity.hpp  PlayerEntity.cpp  PlayerEntity.hpp
src/sim/levelgen/: LevelGenerator.cpp  LevelGenerator.hpp  LevelObjects.hpp  LevelObjectsInternal.hpp  PropDefs.hpp  Structure.cpp  Structure.hpp  StructureDefs.hpp  levelgenerator.cpp  levelgenerator.hpp  levelmanager.cpp  levelmanager.hpp  levelobjects.hpp  propdefs.cpp  propdefs.hpp  structure.cpp  structure.hpp  structuredefs.hpp
src/sim/system/: PlayerSystem.cpp  PlayerSystem.hpp  Systems.hpp
win/: CMakeLists.txt
win/include/win/: BlockMap.hpp  Font.hpp  SimStateExchanger.hpp  SpatialIndex.hpp
win/include/win/gl/: GL.hpp  GLMappedRingBufferRange.hpp
win/include/win/sound/: SoundEngineWindowsDirectSound.hpp
win/src/: Font.cpp  Targa.cpp  X11Display.cpp  display.cpp
win/src/gl/: GL.cpp
